# isro_px4_drone_sim

./: CMakeLists.txt  README.md  package.xml
config/: bridge.yaml
launch/: px4_drone_sitl.launch.py  px4_sim.launch.py
models/depth_cam/: model.xacro
models/lidar_down/: model.xarco
scripts/: launch_simulation.py
test/: test.py
worlds/mars/: mars.world  mars_husky.world
worlds/mars_arena/: mars_arena.world  model.sdf
